14-Apr-2016 Fixes #224. Xcode PBXBuildFiles (roughly analogous to an object file) had a 1-1 relationship with a PBXFileReference (roughly analogous to a source file). However, source files that are shared by different targets cannot have per-target compilation settings. So PBXBuildFiles are now unique per-filereference per-target. Extended the EmbedStaticIntoDynamicLibrary to exercise this.

12-Apr-2016 Issue #171. Infrastructure in place for minimizing rewriting Xcode projects, similar to the VisualStudio change, except that Xcode GUIDs are currently non-deterministic. A new issue has been created to address that. Until then, minimized rebuilds for Xcode project files is disabled.

12-Apr-2016 Issue #171. If VisualStudio projects, filters and solution files already exist from a previous Bam build, and a non-clean build is performed, only those files that are different to what is already on disk are written back. On large projects this significantly reduces the reload time in the VisualStudio IDE when the change to the Bam build scripts has only a small influence on the project files. If more than one thread is used to generate a VisualStudio project, i.e. -j=N, where N==0 or N>1, then project files with build events may be rewritten if the commands within the build events occur in a different order.

12-Apr-2016 Fixes #221. OSX DynamicLibraries and Plugins now default to using an install name of @rpath/libname, rather than @executable_path/libname. OSX applications (not dylibs nor plugins) now have a default RPath of @executable_path/, to balance out the install name change for basic applications. Using @rpath is a more flexible method for being able to identify where dylibs have been installed. Note the trailing / on the default RPath, which appears necessary for OSX < 10.10.
