@@ -1,3 +1,5 @@
+15-Apr-2016 Fixes #225. Specifying a package version override on the command line, which does not match the unique package version contained in all the definition files, will now report an error, rather than using the unique package version. For example, if VisualC-12.0 is the only version of the package in all definition files, but --VisualC.version=14.0 was on the command line, this now causes an error rather than just using 12.0.
+
 14-Apr-2016 Fixes #224. Xcode PBXBuildFiles (roughly analogous to an object file) had a 1-1 relationship with a PBXFileReference (roughly analogous to a source file). However, source files that are shared by different targets cannot have per-target compilation settings. So PBXBuildFiles are now unique per-filereference per-target. Extended the EmbedStaticIntoDynamicLibrary to exercise this.
 
 12-Apr-2016 Issue #171. Infrastructure in place for minimizing rewriting Xcode projects, similar to the VisualStudio change, except that Xcode GUIDs are currently non-deterministic. A new issue has been created to address that. Until then, minimized rebuilds for Xcode project files is disabled.
